to the language modules take place, starting from the stable release
1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.

7/17/2001: cheetah (william fulton)
	   * Parser bug fix to support constant pointers, eg int* const ptr.
	   Fixed everywhere - variables, parameters, return types etc. Note that
	   when wrapping a constant pointer variable only the getter is generated.

7/17/2001: mkoeppe
	   * Fixed SF bug #441470 (#define X "//" would not be parsed,
	     see test-suite entry "preproc-1"), reported by T. W. Burton
	     <twburton@users.sf.net>.
	   * Changed the type of character constants to "char", rather
	     than "char *".  Changed the individual language modules
	     to keep the old behaviour, except for the Guile module,
	     where it is desired to make them Scheme characters.  This
	     fixes SF bug #231409, test-suite entry "char-constant".
	   * Applied patch for DOH/Doh/memory.c by Les Schaffer
	     <schaffer@optonline.net> (avoid required side effects in
	     assert). 

7/17/2001: cheetah (william fulton)
	   * Bug fix in parser for virtual destructor with void as parameter
	   * Bug fix in parser #defines embedded within classes/structs/unions
	   Consequently %constant can now also be placed within a struct/class/union.
	   * Bug fix in parser to allow sizeof(*I_am_a_pointer) within a #define

7/16/2001: mkoeppe
	   * Added changes for the Macintosh contributed by Luigi
	   Ballabio <ballabio@mac.com>. 
	   * Some "const" fixes in the code.
	   * [Guile]: Made the constant-wrapper functions much shorter.

7/13/2001: mkoeppe
	   * [Guile]: Some "const" fixes for Guile version 1.3.4.
	   * Handle anonymous arguments with default values and static