@@ -37,18 +37,16 @@ Guile Options (available with -guile)\n\
      -package name   - Set the path of the module [default NULL]\n\
      -linkage lstyle - Use linkage protocol LSTYLE [default `module']\n\
      -procdoc file   - Output procedure documentation to FILE\n\
-\n\
      -procdocformat format - Output procedure documentation in FORMAT;\n\
                              one of `guile-1.4', `plain', `texinfo'\n\
-  The module option does not create a guile module with a separate name\n\
-  space.  It specifies the name of the initialization function and is\n\
-  called a module here so that it is compadible with the rest of SWIG.\n\
+     -scmstub file   - Output Scheme FILE with module declaration and\n\
+                       exports; only with `passive' and `simple' linkage\n\
 \n\
   When unspecified, the default LSTYLE is `simple'.  For native Guile\n\
   module linking (for Guile versions >=1.5.0), use `module'.  Other\n\
-  LSTYLE values are: `passive' for passive linking (no module-handling\n\
-  code), `ltdlmod' for Guile's old dynamic module convention\n\
-  (versions <= 1.4), or `hobbit' for hobbit modules.\n\
+  LSTYLE values are: `passive' for passive linking (no C-level\n\
+  module-handling  code), `ltdlmod' for Guile's old dynamic module\n\
+  convention (versions <= 1.4), or `hobbit' for hobbit modules.\n\
 \n";
 
 // ---------------------------------------------------------------------
@@ -68,11 +66,13 @@ GUILE::GUILE ()
   package = NULL;
   linkage = GUILE_LSTYLE_SIMPLE;
   procdoc = NULL;
+  scmstub = NULL;
   docformat = GUILE_1_4;
   emit_setters = 0;
   struct_member = 0;
   before_return = NULL;
   exported_symbols = NewString("");
+  scmtext = NewString("");
 }
 
 // ---------------------------------------------------------------------
@@ -131,7 +131,6 @@ GUILE::parse_args (int argc, char *argv[])
 	printf("%s\n", SWIG_GUILE_RUNTIME);
 	SWIG_exit (EXIT_SUCCESS);
       }
-      /* The upcase variant is a historic artefact. */
       else if (strcmp (argv[i], "-Linkage") == 0
 	       || strcmp (argv[i], "-linkage") == 0) {
         if (argv[i + 1]) {
@@ -179,6 +178,16 @@ GUILE::parse_args (int argc, char *argv[])
       else if (strcmp (argv[i], "-emit-setters") == 0) {
 	emit_setters = 1;
 	Swig_mark_arg (i);
+      }
+      else if (strcmp (argv[i], "-scmstub") == 0) {
+	if (argv[i + 1]) {
+	  scmstub = NewFile(argv[i + 1], (char *) "w");
+	  Swig_mark_arg (i);
+          Swig_mark_arg (i + 1);
+	  i++;
+	} else {
+	  Swig_arg_error();
+        }
       }
     }
   }
@@ -263,11 +272,12 @@ GUILE::headers (void)
 
   Printf (f_runtime, "/* Implementation : GUILE */\n\n");
 
-  // Write out directives and declarations
+  /* Write out directives and declarations */
 
   if (NoInclude) {
     Printf(f_runtime, "#define SWIG_NOINCLUDE\n");
   }
+
 }
 
 // --------------------------------------------------------------------
@@ -365,6 +375,7 @@ GUILE::emit_linkage (char *module_name)
       Printf(f_init, "    SCM module = scm_c_define_module(\"%s\",\n", mod);
       Printf(f_init, "      SWIG_init_helper, NULL);\n");
       Printf(f_init, "    return SCM_UNSPECIFIED;\n");
+      Delete(mod);
     }
     Printf (f_init, "}\n");
     break;
@@ -386,6 +397,30 @@ GUILE::emit_linkage (char *module_name)
   default:
     abort();                            // for now
   }
+
+  if (scmstub) {
+    /* Emit Scheme stub if requested */
+    DOHString *mod = NewString(module_name);
+    Replace(mod, "/", " ", DOH_REPLACE_ANY);
+    Printf (scmstub, ";;; -*- buffer-read-only: t -*- vi: set ro: */\n");
+    Printf (scmstub, ";;; Automatically generated by SWIG; do not edit.\n\n");
+    if (linkage == GUILE_LSTYLE_SIMPLE
+	|| linkage == GUILE_LSTYLE_PASSIVE)
+      Printf (scmstub, "(define-module (%s))\n\n", mod);
+    Delete(mod);
+    Printf (scmstub, "%s", scmtext);
+    if ((linkage == GUILE_LSTYLE_SIMPLE
+	|| linkage == GUILE_LSTYLE_PASSIVE)
+	&& Len(exported_symbols) > 0) {
+      DOHString *ex = NewString(exported_symbols);
+      Replace(ex, ", ", "\n        ", DOH_REPLACE_ANY);
+      Replace(ex, "\"", "", DOH_REPLACE_ANY);
+      Chop(ex);
+      Printf(scmstub, "\n(export %s)\n", ex);
+      Delete(ex);
+    }
+  }
+  
   Delete(module_func);
   if (CPlusPlus) {
     Printf(f_init, "\n}\n");
@@ -420,6 +455,10 @@ GUILE::close (void)
   if (procdoc) {
     Delete(procdoc);
     procdoc = NULL;
+  }
+  if (scmstub) {
+    Delete(scmstub);
+    scmstub = NULL;
   }
 }
 
@@ -1027,7 +1066,13 @@ void GUILE::pragma(char *lang, char *cmd, char *value)
     if (strcmp(cmd, (char*)"beforereturn")==0) {
       if (before_return)
 	Delete(before_return);
-      before_return = NewString(value);
+      before_return = value ? NewString(value) : NULL;
+    }
+    else if (strcmp(cmd, (char*)"scheme")==0) {
+      /* insert scheme text */
+      if (scmstub && value) {
+	Printf(scmtext, "%s\n", value);
+      }
     }
   }
 }
