@@ -14,6 +14,14 @@ http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian).
 Eventually this branch will be merged with the development on the
 trunk of the CVS tree; this merging will occur in the "rel-1-5" branch.
 
+7/17/2001: mkoeppe
+	   * [Guile]: A Scheme file is emitted if the -scmstub FILE.SCM
+	   command-line option is used.  The %scheme directive
+	   (implemented as a macro for a pragma) allows to insert
+	   arbitrary code here.  In "simple" and "passive" linkage,
+	   the file gets filled with define-module and export
+	   declarations.
+
 7/17/2001: cheetah (william fulton)
 	   * Parser bug fix to support constant pointers, eg int* const ptr.
 	   Fixed everywhere - variables, parameters, return types etc. Note that
